--- a/The Math/ChartDetailView.xib
+++ b/The Math/ChartDetailView.xib
@@ -10,19 +10,19 @@
             <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="reI-jc-7FP">
+                <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="reI-jc-7FP">
                     <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                     <subviews>
-                        <view contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="2Zn-7x-b4A" userLabel="Content View">
+                        <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="2Zn-7x-b4A" userLabel="Content View">
                             <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                             <subviews>
-                                <view contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="SDV-Zh-V5M" userLabel="Header">
+                                <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="SDV-Zh-V5M" userLabel="Header">
                                     <rect key="frame" x="0.0" y="0.0" width="600" height="140"/>
                                     <subviews>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tMj-z7-Xco">
                                             <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kX9-B7-qyn" customClass="CabritoLabel" customModule="HowAmIDoing" customModuleProvider="target">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kX9-B7-qyn" customClass="CabritoLabel" customModule="HowAmIDoing" customModuleProvider="target">
                                                     <rect key="frame" x="34" y="24" width="414" height="34"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="28"/>
                                                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
@@ -45,7 +45,7 @@
                                                         </mask>
                                                     </variation>
                                                 </view>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OMG-sg-zCC" customClass="CabritoLabel" customModule="HowAmIDoing" customModuleProvider="target">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OMG-sg-zCC" customClass="CabritoLabel" customModule="HowAmIDoing" customModuleProvider="target">
                                                     <rect key="frame" x="34" y="66" width="414" height="17"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                     <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
@@ -175,7 +175,7 @@
                                         <constraint firstItem="WAj-Rm-Xrb" firstAttribute="leading" secondItem="SDV-Zh-V5M" secondAttribute="leading" constant="34" id="O8k-Uj-pEx"/>
                                         <constraint firstItem="TFJ-8S-ca4" firstAttribute="leading" secondItem="SDV-Zh-V5M" secondAttribute="leading" constant="34" id="Opg-3I-9Je"/>
                                         <constraint firstItem="tMj-z7-Xco" firstAttribute="leading" secondItem="SDV-Zh-V5M" secondAttribute="leading" constant="34" id="VVf-Bx-fii"/>
-                                        <constraint firstItem="TFJ-8S-ca4" firstAttribute="top" secondItem="WAj-Rm-Xrb" secondAttribute="bottom" constant="60" id="XeQ-jG-qzv"/>
+                                        <constraint firstItem="TFJ-8S-ca4" firstAttribute="top" secondItem="WAj-Rm-Xrb" secondAttribute="bottom" constant="40" id="XeQ-jG-qzv"/>
                                         <constraint firstAttribute="bottom" secondItem="WAj-Rm-Xrb" secondAttribute="bottom" constant="8" id="bQU-Fp-hQu"/>
                                         <constraint firstItem="pLz-gx-ZOP" firstAttribute="leading" secondItem="WAj-Rm-Xrb" secondAttribute="trailing" constant="8" id="eHg-dL-c9m"/>
                                         <constraint firstItem="pLz-gx-ZOP" firstAttribute="leading" secondItem="tMj-z7-Xco" secondAttribute="trailing" constant="8" id="wc1-Ce-TNG"/>
@@ -188,15 +188,15 @@
                                             <exclude reference="TFJ-8S-ca4"/>
                                         </mask>
                                         <mask key="constraints">
-                                            <exclude reference="6WE-jE-Hld"/>
-                                            <exclude reference="VVf-Bx-fii"/>
+                                            <exclude reference="9Wz-1E-ui9"/>
+                                            <exclude reference="Opg-3I-9Je"/>
+                                            <exclude reference="XeQ-jG-qzv"/>
                                             <exclude reference="19O-pH-SeS"/>
                                             <exclude reference="CwI-Fj-TLi"/>
                                             <exclude reference="O8k-Uj-pEx"/>
                                             <exclude reference="bQU-Fp-hQu"/>
-                                            <exclude reference="9Wz-1E-ui9"/>
-                                            <exclude reference="Opg-3I-9Je"/>
-                                            <exclude reference="XeQ-jG-qzv"/>
+                                            <exclude reference="6WE-jE-Hld"/>
+                                            <exclude reference="VVf-Bx-fii"/>
                                             <exclude reference="415-NK-cNa"/>
                                             <exclude reference="9pn-XY-Jhp"/>
                                             <exclude reference="eHg-dL-c9m"/>
@@ -211,15 +211,15 @@
                                             <include reference="TFJ-8S-ca4"/>
                                         </mask>
                                         <mask key="constraints">
-                                            <include reference="6WE-jE-Hld"/>
-                                            <include reference="VVf-Bx-fii"/>
+                                            <include reference="9Wz-1E-ui9"/>
+                                            <include reference="Opg-3I-9Je"/>
+                                            <include reference="XeQ-jG-qzv"/>
                                             <include reference="19O-pH-SeS"/>
                                             <exclude reference="CwI-Fj-TLi"/>
                                             <include reference="O8k-Uj-pEx"/>
                                             <exclude reference="bQU-Fp-hQu"/>
-                                            <include reference="9Wz-1E-ui9"/>
-                                            <include reference="Opg-3I-9Je"/>
-                                            <include reference="XeQ-jG-qzv"/>
+                                            <include reference="6WE-jE-Hld"/>
+                                            <include reference="VVf-Bx-fii"/>
                                             <include reference="415-NK-cNa"/>
                                             <include reference="9pn-XY-Jhp"/>
                                             <exclude reference="eHg-dL-c9m"/>
